--- a/final_project_mcc/pubspec.yaml
+++ b/final_project_mcc/pubspec.yaml
@@ -67,6 +67,9 @@ flutter:
   assets:
     - assets/carousel/
     - assets/fishtype/
+    - assets/freshwater/
+    - assets/saltwater/
+    - assets/deepsea/
 
   # To add assets to your application, add an assets section, like this:
   # assets:
