--- a/final_project_mcc/pubspec.yaml
+++ b/final_project_mcc/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   easy_image_viewer: ^1.2.0
   fab_circular_menu: ^1.0.0
   flutter_svg: ^1.1.6
+  cloud_firestore: ^4.3.1
 
 dev_dependencies:
   flutter_test:
