--- a/final_project_mcc/pubspec.yaml
+++ b/final_project_mcc/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   fab_circular_menu: ^1.0.0
   flutter_svg: ^1.1.6
   cloud_firestore: ^4.3.1
+  http: ^0.13.5
 
 dev_dependencies:
   flutter_test:
